adds navigation bar

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netmatters | Full Service Digital Agency | Norwich, Norfolk | Netmatters</title>
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <header>
+        Header goes 'ere.
         <!-- TODO: header content
             netmatters logo image
             support button
@@ -24,20 +27,48 @@
     </header>
 
     <nav>
-        <!-- TODO: nav content
-            link to a page (can use placeholder)
-            with text and coloured icon placed above
-                web design
-                it support
-                telecoms services
-                bespoke software
-                digital marketing
-
-            hidden at 991px or smaller
-        -->
+        <ul>
+            <li>
+                <a class="web-design" href="https://www.netmatters.co.uk/web-design">
+                    <span class="icon-code"></span>
+                    <p>Web<br>Design</p>
+                </a>
+            </li>
+            <li>
+                <a class="it-support" href="https://www.netmatters.co.uk/it-support">
+                    <span class="icon-monitor"></span>
+                    <p>IT<br>Support</p>
+                </a>
+            </li>
+            <li>
+                <a class="telecoms-services" href="https://www.netmatters.co.uk/telecoms-services">
+                    <span class="icon-phone"></span>
+                    <p>Telecoms<br>Services</p>
+                </a>
+            </li>
+            <li>
+                <a class="bespoke-software" href="https://www.netmatters.co.uk/bespoke-software">
+                    <span class="icon-grid"></span>
+                    <p>Bespoke<br>Software</p>
+                </a>
+            </li>
+            <li>
+                <a class="digital-marketing" href="https://www.netmatters.co.uk/digital-marketing">
+                    <span class="icon-bars"></span>
+                    <p>Digital<br>Marketing</p>
+                </a>
+            </li>
+            <li>
+                <a class="cyber-security" href="https://www.netmatters.co.uk/cyber-security">
+                    <span class="icon-shield"></span>
+                    <p>Cyber<br>Security</p>
+                </a>
+            </li>
+        </ul>
     </nav>
 
     <section>
+        Hero image.
         <!-- TODO: hero image
             single "web design" item from the original carousel
             large background image with overlaid text
@@ -53,6 +84,7 @@
     </section>
 
     <section>
+        Services.
         <!-- TODO: service cards
             Each with an icon in coloured circle, header, text, and call to action button.
             Icon's circle and CTA are matched within each card and unique to that card.
@@ -92,6 +124,7 @@
     </section>
 
     <section>
+        About Netmatters
         <!-- TODO: About Netmatters
             First paragraph is bold.
 
@@ -108,6 +141,7 @@
     </section>
 
     <section>
+        Latest posts.
         <!-- TODO: latest posts
             "Latest" header, followed by cards for recent blog posts
             Images enlarge on hover
@@ -119,6 +153,7 @@
     </section>
 
     <section>
+        Client logos.
         <!-- TOOD: clients
             black and white logos for various clients
             hidden at 767px and smaller
@@ -126,6 +161,7 @@
     </section>
 
     <footer>
+        Footer.
         <!-- TODO: footer
             contact us
             website
@@ -139,6 +175,7 @@
     </footer>
 
     <section>
+        Accreditations.
         <!-- TODO: accreditations
             black and white logos for various accreditations
 
@@ -147,19 +184,20 @@
     </section>
 
     <!-- test icons -->
-    <!--
-    <p><span class="icon-bars"></span>Bars</p>
-    <p><span class="icon-code"></span>Code</p>
-    <p><span class="icon-facebook"></span>Facebook</p>
-    <p><span class="icon-grid"></span>Grid</p>
-    <p><span class="icon-linked-in"></span>Linked-in</p>
-    <p><span class="icon-monitor"></span>Monitor</p>
-    <p><span class="icon-phone"></span>Phone</p>
-    <p><span class="icon-right-arrow"></span>Right</p>
-    <p><span class="icon-search"></span>Search</p>
-    <p><span class="icon-shield"></span>Shield</p>
-    <p><span class="icon-student-cap"></span>Student Cap</p>
-    <p><span class="icon-twitter"></span>Twitter</p>
-    -->
+    <section>
+        <p><span class="icon-bars"></span>Bars</p>
+        <p><span class="icon-code"></span>Code</p>
+        <p><span class="icon-facebook"></span>Facebook</p>
+        <p><span class="icon-grid"></span>Grid</p>
+        <p><span class="icon-linked-in"></span>Linked-in</p>
+        <p><span class="icon-monitor"></span>Monitor</p>
+        <p><span class="icon-phone"></span>Phone</p>
+        <p><span class="icon-right-arrow"></span>Right</p>
+        <p><span class="icon-search"></span>Search</p>
+        <p><span class="icon-shield"></span>Shield</p>
+        <p><span class="icon-student-cap"></span>Student Cap</p>
+        <p><span class="icon-twitter"></span>Twitter</p>
+    </section>
+   
 </body>
 </html>
