--- a/index.html
+++ b/index.html
@@ -67,20 +67,10 @@
         </ul>
     </nav>
 
-    <section>
-        Hero image.
-        <!-- TODO: hero image
-            single "web design" item from the original carousel
-            large background image with overlaid text
-            header
-                "Web Design"
-            text
-                "For businesses looking to make a strong and effective first impression."
-            call to action
-                "Find out more ->"
-
-            991px or smaller text and button are center align, left align when larger.
-         -->
+    <section id="hero-image">
+        <h2>Web Design</h2>
+        <p>For businesses looking to make a strong<br>and effective first impression.</p>
+        <a href="https://www.netmatters.co.uk/web-design">Find out more <span class="icon-right-arrow"></span></a>
     </section>
 
     <section>
