--- a/index.html
+++ b/index.html
@@ -113,21 +113,17 @@
          -->
     </section>
 
-    <section>
-        About Netmatters
-        <!-- TODO: About Netmatters
-            First paragraph is bold.
+    <section id="about">
+        <div class="content">
+            <h2>Netmatters</h2>
+            <p>Netmatters Ltd is a leading web design, IT support and digital marketing agency based in Wymondham, Norfolk.</p>
 
-            Netmatters
+            <p>Founded in 2008, we work with businesses from a variety of industries to gain new prospects, nurture existing leads and further grow their sales.</p>
 
-            Netmatters Ltd is a leading web design, IT support and digital marketing agency based in Wymondham, Norfolk.
+            <p>We provide cost effective, reliable solutions to a range of services; from bespoke cloud-based management systems, workflow and IT solutions through to creative website development and integrated digital campaigning.</p>
 
-            Founded in 2008, we work with businesses from a variety of industries to gain new prospects, nurture existing leads and further grow their sales.            
-
-            We provide cost effective, reliable solutions to a range of services; from bespoke cloud-based management systems, workflow and IT solutions through to creative website development and integrated digital campaigning.
-
-            Call to action "Our Culture" with icon-arrow-right
-         -->
+            <a>Our Culture <span class="icon-right-arrow"></span></a>
+        </div>
     </section>
 
     <section>
