--- a/index.html
+++ b/index.html
@@ -73,44 +73,56 @@
         <a href="https://www.netmatters.co.uk/web-design">Find out more <span class="icon-right-arrow"></span></a>
     </section>
 
-    <section>
-        Services.
-        <!-- TODO: service cards
-            Each with an icon in coloured circle, header, text, and call to action button.
-            Icon's circle and CTA are matched within each card and unique to that card.
-            All calls to action are "READ MORE" buttons
-
-            991px or smaller moves to one card per row for: bespoke, support, marketing. Others are 2 per row, until 767 or smaller when they're all one per row.
-
-
-            icon-grid
-            Bespoke Software
-            Tailored software solutions to improve business productivity and online profits. Our expert team will ensure a software solution.
-
-            icon-monitor
-            IT Support
-            Remotely managed IT services that is catered to your businesses needs, adds value and reduces costs.
-
-            icon-bars
-            Digital Marketing
-            Driving brand awareness and ROI through creative digital marketing campaigns. We review and monitor online performances. 
-                        
-            icon-phone
-            Telecoms Services
-            Stay connected with bespoke telecoms solutions when you need it most.
-
-            icon-code
-            Web Design
-            User-centric design for businesses looking to make a lasting first impression.
-                        
-            icon-shield
-            Cyber Security
-            Ensuring your online business stays secure 24/7, 365 days of the year.
-
-            icon-student-cap
-            Developer Training
-            Have you considered a career in web development but you aren’t sure where to start?
-         -->
+    <section id="services">
+        <a href="https://www.netmatters.co.uk/bespoke-software">
+            <article class="bespoke-software">
+                <h2>Bespoke Software</h2>
+                <p>Tailored software solutions to improve business productivity and online profits. Our expert team will ensure a software solution.</p>
+                <p class="call-to-action">Read more</p>
+            </article>
+        </a>
+        <a href="https://www.netmatters.co.uk/it-support">
+            <article class="it-support">
+                <h2>IT Support</h2>
+                <p>Remotely managed IT services that is catered to your businesses needs, adds value and reduces costs.</p>
+                <p class="call-to-action">Read more</p>
+            </article>
+        </a>
+        <a href="https://www.netmatters.co.uk/digital-marketing">
+            <article class="digital-marketing">
+                <h2>Digital Marketing</h2>
+                <p>Driving brand awareness and ROI through creative digital marketing campaigns. We review and monitor online performances.</p>
+                <p class="call-to-action">Read more</p>
+            </article>
+        </a>
+        <a href="https://www.netmatters.co.uk/telecoms-services">
+            <article class="telecoms-services">
+                <h2>Telecoms Services</h2>
+                <p>Stay connected with bespoke telecoms solutions when you need it most.</p>
+                <p class="call-to-action">Read more</p>
+            </article>
+        </a>
+        <a href="https://www.netmatters.co.uk/web-design">
+            <article class="web-design">
+                <h2>Web Design</h2>
+                <p>User-centric design for businesses looking to make a lasting first impression.</p>
+                <p class="call-to-action">Read more</p>
+            </article>
+        </a>
+        <a href="https://www.netmatters.co.uk/cyber-security">
+            <article class="cyber-security">
+                <h2>Cyber Security</h2>
+                <p>Ensuring your online business stays secure 24/7, 365 days of the year.</p>
+                <p class="call-to-action">Read more</p>
+            </article>
+        </a>
+        <a href="https://www.netmatters.co.uk/scs-web-developer-course">
+            <article class="developer-training">
+                <h2>Developer Training</h2>
+                <p>Have you considered a career in web development but you aren’t sure where to start?</p>
+                <p class="call-to-action">Read more</p>
+            </article>
+        </a>
     </section>
 
     <section id="about">
