--- a/index.html
+++ b/index.html
@@ -74,55 +74,56 @@
     </section>
 
     <section id="services">
-        <a href="https://www.netmatters.co.uk/bespoke-software">
+        <div class="top-services">
             <article class="bespoke-software">
-                <h2>Bespoke Software</h2>
-                <p>Tailored software solutions to improve business productivity and online profits. Our expert team will ensure a software solution.</p>
-                <p class="call-to-action">Read more</p>
+                <a href="https://www.netmatters.co.uk/bespoke-software">
+                    <h2>Bespoke Software</h2>
+                    <p>Tailored software solutions to improve business productivity and online profits. Our expert team will ensure a software solution.</p>
+                    <p class="call-to-action">Read more</p>
+                </a>
             </article>
-        </a>
-        <a href="https://www.netmatters.co.uk/it-support">
             <article class="it-support">
-                <h2>IT Support</h2>
-                <p>Remotely managed IT services that is catered to your businesses needs, adds value and reduces costs.</p>
-                <p class="call-to-action">Read more</p>
+                <a href="https://www.netmatters.co.uk/it-support">
+                    <h2>IT Support</h2>
+                    <p>Remotely managed IT services that is catered to your businesses needs, adds value and reduces costs.</p>
+                    <p class="call-to-action">Read more</p>
+                </a>
             </article>
-        </a>
-        <a href="https://www.netmatters.co.uk/digital-marketing">
             <article class="digital-marketing">
-                <h2>Digital Marketing</h2>
-                <p>Driving brand awareness and ROI through creative digital marketing campaigns. We review and monitor online performances.</p>
-                <p class="call-to-action">Read more</p>
+                <a href="https://www.netmatters.co.uk/digital-marketing">
+                    <h2>Digital Marketing</h2>
+                    <p>Driving brand awareness and ROI through creative digital marketing campaigns. We review and monitor online performances.</p>
+                    <p class="call-to-action">Read more</p>
+                </a>
             </article>
-        </a>
-        <a href="https://www.netmatters.co.uk/telecoms-services">
-            <article class="telecoms-services">
+        </div>
+        <div class="other-services">
+            <a class="telecoms-services" href="https://www.netmatters.co.uk/telecoms-services">
                 <h2>Telecoms Services</h2>
                 <p>Stay connected with bespoke telecoms solutions when you need it most.</p>
                 <p class="call-to-action">Read more</p>
-            </article>
-        </a>
-        <a href="https://www.netmatters.co.uk/web-design">
-            <article class="web-design">
+            </a>
+            <a class="web-design" href="https://www.netmatters.co.uk/web-design">
                 <h2>Web Design</h2>
                 <p>User-centric design for businesses looking to make a lasting first impression.</p>
                 <p class="call-to-action">Read more</p>
-            </article>
-        </a>
-        <a href="https://www.netmatters.co.uk/cyber-security">
-            <article class="cyber-security">
+            </a>
+            <a class="cyber-security" href="https://www.netmatters.co.uk/cyber-security">
                 <h2>Cyber Security</h2>
                 <p>Ensuring your online business stays secure 24/7, 365 days of the year.</p>
                 <p class="call-to-action">Read more</p>
-            </article>
-        </a>
-        <a href="https://www.netmatters.co.uk/scs-web-developer-course">
-            <article class="developer-training">
+            </a>
+            <a class="developer-training" href="https://www.netmatters.co.uk/scs-web-developer-course">
                 <h2>Developer Training</h2>
                 <p>Have you considered a career in web development but you aren’t sure where to start?</p>
                 <p class="call-to-action">Read more</p>
-            </article>
-        </a>
+            </a>
+            <a class="developer-training" href="https://www.netmatters.co.uk/scs-web-developer-course">
+                <h2>Developer Training</h2>
+                <p>Have you considered a career in web development but you aren’t sure where to start?</p>
+                <p class="call-to-action">Read more</p>
+            </a>
+        </div>
     </section>
 
     <section id="about">
