--- a/index.html
+++ b/index.html
@@ -75,27 +75,21 @@
 
     <section id="services">
         <div class="top-services">
-            <article class="bespoke-software">
-                <a href="https://www.netmatters.co.uk/bespoke-software">
-                    <h2>Bespoke Software</h2>
-                    <p>Tailored software solutions to improve business productivity and online profits. Our expert team will ensure a software solution.</p>
-                    <p class="call-to-action">Read more</p>
-                </a>
-            </article>
-            <article class="it-support">
-                <a href="https://www.netmatters.co.uk/it-support">
-                    <h2>IT Support</h2>
-                    <p>Remotely managed IT services that is catered to your businesses needs, adds value and reduces costs.</p>
-                    <p class="call-to-action">Read more</p>
-                </a>
-            </article>
-            <article class="digital-marketing">
-                <a href="https://www.netmatters.co.uk/digital-marketing">
-                    <h2>Digital Marketing</h2>
-                    <p>Driving brand awareness and ROI through creative digital marketing campaigns. We review and monitor online performances.</p>
-                    <p class="call-to-action">Read more</p>
-                </a>
-            </article>
+            <a class="bespoke-software" href="https://www.netmatters.co.uk/bespoke-software">
+                <h2>Bespoke Software</h2>
+                <p>Tailored software solutions to improve business productivity and online profits. Our expert team will ensure a software solution.</p>
+                <p class="call-to-action">Read more</p>
+            </a>
+            <a class="it-support" href="https://www.netmatters.co.uk/it-support">
+                <h2>IT Support</h2>
+                <p>Remotely managed IT services that is catered to your businesses needs, adds value and reduces costs.</p>
+                <p class="call-to-action">Read more</p>
+            </a>
+            <a class="digital-marketing" href="https://www.netmatters.co.uk/digital-marketing">
+                <h2>Digital Marketing</h2>
+                <p>Driving brand awareness and ROI through creative digital marketing campaigns. We review and monitor online performances.</p>
+                <p class="call-to-action">Read more</p>
+            </a>
         </div>
         <div class="other-services">
             <a class="telecoms-services" href="https://www.netmatters.co.uk/telecoms-services">
