--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 <body>
 
     <header>
-        Header goes 'ere.
-        <!-- TODO: header content
-            netmatters logo image
-            support button
-            contact button
-            search field
-            search button
-            menu button
-
-            several responsive breakpoints that hide buttons
-            smallest breakpoint moves search field and button to new line
-        -->
+        <div class="content">
+            <img src="img/netmatters-brand/logo-full-alpha.png" alt="Netmatters">
+            <span class="icon-phone"></span>
+            <div class="hamburger-menu">
+                <p>Menu</p>
+            </div>
+            <form>
+                <input id="search" name="query" type="search" placeholder="Search...">
+                <button type="submit" id="search-submit"></button>
+            </form>
+        </div>
+        <!-- TODO: rest of header content at larger breakpoints -->
     </header>
 
     <nav>
@@ -169,22 +169,6 @@
 
             hidden at 767px and smaller
          -->
-    </section>
-
-    <!-- test icons -->
-    <section>
-        <p><span class="icon-bars"></span>Bars</p>
-        <p><span class="icon-code"></span>Code</p>
-        <p><span class="icon-facebook"></span>Facebook</p>
-        <p><span class="icon-grid"></span>Grid</p>
-        <p><span class="icon-linked-in"></span>Linked-in</p>
-        <p><span class="icon-monitor"></span>Monitor</p>
-        <p><span class="icon-phone"></span>Phone</p>
-        <p><span class="icon-right-arrow"></span>Right</p>
-        <p><span class="icon-search"></span>Search</p>
-        <p><span class="icon-shield"></span>Shield</p>
-        <p><span class="icon-student-cap"></span>Student Cap</p>
-        <p><span class="icon-twitter"></span>Twitter</p>
     </section>
    
 </body>
