change icon styling from placeholder to mixin

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <div class="hamburger-menu">
                 <p>Menu</p>
             </div>
+            <a class="support">Support</a>
+            <a class="contact">Contact</a>
             <form>
                 <input id="search" name="query" type="search" placeholder="Search...">
                 <button type="submit" id="search-submit"></button>
@@ -70,7 +72,7 @@
     <section id="hero-image">
         <h2>Web Design</h2>
         <p>For businesses looking to make a strong<br>and effective first impression.</p>
-        <a href="https://www.netmatters.co.uk/web-design">Find out more <span class="icon-right-arrow"></span></a>
+        <a class="call-to-action" href="https://www.netmatters.co.uk/web-design">Find out more</a>
     </section>
 
     <section id="services">
