--- a/index.html
+++ b/index.html
@@ -163,13 +163,35 @@
          -->
     </footer>
 
-    <section>
-        Accreditations.
-        <!-- TODO: accreditations
-            black and white logos for various accreditations
-
-            hidden at 767px and smaller
-         -->
+    <section id="accreditations">
+        
+        <!-- Google Partner iframe would go here.
+            When locally hosted it doesn't display anything, presumably because Google
+            checks where the site is hosted. To avoid an empty gap just disable for now.
+        <div class="badge">
+            <script src="https://apis.google.com/js/platform.js" async defer></script>
+            <div class="g-partnersbadge" data-agency-id="7604891478"></div>
+        </div>
+        -->
+        <div class="badge">
+            <!-- microsoft partner logo is already greyscale, so no need for two images,
+                but still nest within a .badge div to maintain consistency -->
+                <img src="img/accreditations/silver-microsoft-partner.jpg" alt="silver microsoft partner">
+            </div>
+        <div class="badge">
+            <!-- partner badges given in colour and greyscale version, styled so only one is shown
+                ideally would use CSS image filters to make the image greyscale, but not supported in IE11 -->
+            <img class="colour" src="img/accreditations/future-50.jpg" alt="future50 member">
+            <img class="bw" src="img/accreditations/future-50-bw.jpg" alt="future50 member">
+        </div>
+        <div class="badge">
+            <img class="colour" src="img/accreditations/qms.jpg" alt="ISO 27001 certified by QMS">
+            <img class="bw" src="img/accreditations/qms-bw.jpg" alt="ISO 27001 certified by QMS">
+        </div>
+        <div class="badge">
+            <img class="colour" src="img/accreditations/norfolk-carbon-charter.jpg" alt="Norfolk carbon charter silver 2019">
+            <img class="bw" src="img/accreditations/norfolk-carbon-charter-bw.jpg" alt="Norfolk carbon charter silver 2019">
+        </div>
     </section>
    
 </body>
