add clients section

--- a/index.html
+++ b/index.html
@@ -141,12 +141,49 @@
          -->
     </section>
 
-    <section>
-        Client logos.
-        <!-- TOOD: clients
-            black and white logos for various clients
-            hidden at 767px and smaller
-         -->
+    <section id="clients">
+        <div class="badge">
+            <!-- badges given in colour and greyscale version, styled so only one is shown.
+                Ideally would use CSS image filters to make the image greyscale, but not supported in IE11 -->
+            <img class="colour" src="img/partner-brands/busseys-colour.png" alt="Busseys logo">
+            <img class="bw" src="img/partner-brands/busseys-bw.png" alt="Busseys logo">
+            <div class="tooltip-wrapper">
+                <div class="tooltip-content">
+                    <h3>Busseys</h3>
+                    <p>One of the UK's leading Ford dealerships.</p>
+                </div>
+            </div>
+        </div>
+        <div class="badge">
+            <img class="colour" src="img/partner-brands/crane-colour.png" alt="Crane Garden Buildings logo">
+            <img class="bw" src="img/partner-brands/crane-bw.png" alt="Crane Garden Buildings logo">
+            <div class="tooltip-wrapper">
+                <div class="tooltip-content">
+                    <h3>Crane Garden Builders</h3>
+                    <p>Leading manufacturer and supplier of high-end garden rooms, summerhouses, workshops and sheds in the UK.</p>
+                </div>
+            </div>
+        </div>
+        <div class="badge">
+            <img class="colour" src="img/partner-brands/beat-colour.png" alt="Beat logo">
+            <img class="bw" src="img/partner-brands/beat-bw.png" alt="Beat logo">
+            <div class="tooltip-wrapper">
+                <div class="tooltip-content">
+                    <h3>Beat</h3>
+                    <p>The UK's eating disorder charity founded in 1989.</p>
+                </div>
+            </div>
+        </div>
+        <div class="badge">
+            <img class="colour" src="img/partner-brands/northern-diver-colour.png" alt="Northern Diver logo">
+            <img class="bw" src="img/partner-brands/northern-diver-bw.png" alt="Northern Diver logo">
+            <div class="tooltip-wrapper">
+                <div class="tooltip-content">
+                    <h3>Northern Diver</h3>
+                    <p>Global water based equipment manufacturers for sport, military, commercial and rescue businesses.</p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
@@ -179,8 +216,8 @@
                 <img src="img/accreditations/silver-microsoft-partner.jpg" alt="silver microsoft partner">
             </div>
         <div class="badge">
-            <!-- partner badges given in colour and greyscale version, styled so only one is shown
-                ideally would use CSS image filters to make the image greyscale, but not supported in IE11 -->
+            <!-- badges given in colour and greyscale version, styled so only one is shown.
+                Ideally would use CSS image filters to make the image greyscale, but not supported in IE11 -->
             <img class="colour" src="img/accreditations/future-50.jpg" alt="future50 member">
             <img class="bw" src="img/accreditations/future-50-bw.jpg" alt="future50 member">
         </div>
