add links to crane and northern diver badges

--- a/index.html
+++ b/index.html
@@ -155,8 +155,10 @@
             </div>
         </div>
         <div class="badge">
-            <img class="colour" src="img/partner-brands/crane-colour.png" alt="Crane Garden Buildings logo">
-            <img class="bw" src="img/partner-brands/crane-bw.png" alt="Crane Garden Buildings logo">
+            <a href="https://www.netmatters.co.uk/new-website-developed-for-crane-garden-buildings">
+                <img class="colour" src="img/partner-brands/crane-colour.png" alt="Crane Garden Buildings logo">
+                <img class="bw" src="img/partner-brands/crane-bw.png" alt="Crane Garden Buildings logo">
+            </a>
             <div class="tooltip-wrapper">
                 <div class="tooltip-content">
                     <h3>Crane Garden Builders</h3>
@@ -175,8 +177,10 @@
             </div>
         </div>
         <div class="badge">
-            <img class="colour" src="img/partner-brands/northern-diver-colour.png" alt="Northern Diver logo">
-            <img class="bw" src="img/partner-brands/northern-diver-bw.png" alt="Northern Diver logo">
+            <a href="https://www.netmatters.co.uk/new-northern-diver-website-is-live">
+                <img class="colour" src="img/partner-brands/northern-diver-colour.png" alt="Northern Diver logo">
+                <img class="bw" src="img/partner-brands/northern-diver-bw.png" alt="Northern Diver logo">
+            </a>
             <div class="tooltip-wrapper">
                 <div class="tooltip-content">
                     <h3>Northern Diver</h3>
