add footer styling for all breakpoints

--- a/index.html
+++ b/index.html
@@ -191,77 +191,73 @@
     </section>
 
     <footer>
-        <!-- TODO: footer
-            another grid layout(?)
-            767px and smaller becomes single column
-            1260px and larger 4 columns, so single row
-         -->
+        <div class="wrapper">
+            <section class="contact">
+                <h2>Contact Us</h2>
+                <address class="vcard">
+                    <span class="fn org">Netmatters Ltd.</span>
+                    <span class="adr">
+                        <span class="street-address">11 Penfold Drive</span>
+                        <span class="locality">Wymondham</span>
+                        <span class="region">Norfolk</span>
+                        <span class="postal-code">NR18 0WZ</span>
+                        <span class="country-name">UK</span>
+                    </span>
+                    <span>Tel: <a href="tel:01603704020"><span class="tel">01603 70 40 20</span></a></span>
+                    <span>Email: <a href="mailto:support@netmatters.com"><span class="email">support@netmatters.com</span></a>
+                </address>
+            </section>
 
-        <section class="contact">
-            <h2>Contact Us</h2>
-            <address class="vcard">
-                <span class="fn org">Netmatters Ltd.</span>
-                <span class="adr">
-                    <span class="street-address">11 Penfold Drive</span>
-                    <span class="locality">Wymondham</span>
-                    <span class="region">Norfolk</span>
-                    <span class="postal-code">NR18 0WZ</span>
-                    <span class="country-name">UK</span>
-                </span>
-                <span>Tel: <a href="tel:01603704020"><span class="tel">01603 70 40 20</span></a></span>
-                <span>Email: <a href="mailto:support@netmatters.com"><span class="email">support@netmatters.com</span></a>
-            </address>
-        </section>
+            <section class="about">
+                <h2>About Netmatters</h2>
+                <ul>
+                    <li><a href="https://www.netmatters.co.uk/news">
+                        News
+                    </a></li>
+                    <li><a href="https://www.netmatters.co.uk/our-careers">
+                        Our Careers
+                    </a></li>
+                    <li><a href="https://www.netmatters.co.uk/team">
+                        Our Team
+                    </a></li>
+                    <li><a href="https://www.netmatters.co.uk/office-tour">
+                        Our Office Tour
+                    </a></li>
+                    <li><a href="https://www.netmatters.co.uk/privacy-policy">
+                        Privacy Policy
+                    </a></li>
+                    <li><a href="https://www.netmatters.co.uk/cookie-policy">
+                        Cookie Policy
+                    </a></li>
+                    <li><a href="https://www.netmatters.co.uk/terms-and-conditions">
+                        Terms & Conditions
+                    </a></li>
+                    <li><a href="https://www.netmatters.co.uk/terms-and-conditions/uk-domains">
+                        UK Domains
+                    </a></li>
+                </ul>
+            </section>
 
-        <section class="about">
-            <h2>About Netmatters</h2>
-            <ul>
-                <li><a href="https://www.netmatters.co.uk/news">
-                    News
-                </a></li>
-                <li><a href="https://www.netmatters.co.uk/our-careers">
-                    Our Careers
-                </a></li>
-                <li><a href="https://www.netmatters.co.uk/team">
-                    Our Team
-                </a></li>
-                <li><a href="https://www.netmatters.co.uk/office-tour">
-                    Our Office Tour
-                </a></li>
-                <li><a href="https://www.netmatters.co.uk/privacy-policy">
-                    Privacy Policy
-                </a></li>
-                <li><a href="https://www.netmatters.co.uk/cookie-policy">
-                    Cookie Policy
-                </a></li>
-                <li><a href="https://www.netmatters.co.uk/terms-and-conditions">
-                    Terms & Conditions
-                </a></li>
-                <li><a href="https://www.netmatters.co.uk/terms-and-conditions/uk-domains">
-                    UK Domains
-                </a></li>
-            </ul>
-        </section>
+            <section class="website">
+                <h2>Website</h2>
+                <ul>
+                    <li><a href="https://www.netmatters.co.uk/sitemap.xml">
+                        Sitemap
+                    </a></li>
+                    <li>&copy; Copyright Netmatters Ltd. 2020</li>
+                    <li>All rights reserved</li>
+                </ul>
+            </section>
 
-        <section class="website">
-            <h2>Website</h2>
-            <ul>
-                <li><a href="https://www.netmatters.co.uk/sitemap.xml">
-                    Sitemap
-                </a></li>
-                <li>&copy; Copyright Netmatters Ltd. 2020</li>
-                <li>All rights reserved</li>
-            </ul>
-        </section>
-
-        <section class="social-media">
-            <h2>Social Media</h2>
-            <ul>
-                <li><a class="facebook" href="https://en-gb.facebook.com/netmatters/" target="_blank"></a></li>
-                <li><a class="twitter" href="https://twitter.com/netmattersltd" target="_blank"></a></li>
-                <li><a class="linkedin" href="https://www.linkedin.com/company/netmatters-ltd/" target="_blank"></a></li>
-            </ul>
-        </section>
+            <section class="social-media">
+                <h2>Social Media</h2>
+                <ul>
+                    <li><a class="facebook" href="https://en-gb.facebook.com/netmatters/" target="_blank"></a></li>
+                    <li><a class="twitter" href="https://twitter.com/netmattersltd" target="_blank"></a></li>
+                    <li><a class="linkedin" href="https://www.linkedin.com/company/netmatters-ltd/" target="_blank"></a></li>
+                </ul>
+            </section>
+        </div>
     </footer>
 
     <section id="accreditations">
