--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
             <p>We provide cost effective, reliable solutions to a range of services; from bespoke cloud-based management systems, workflow and IT solutions through to creative website development and integrated digital campaigning.</p>
 
-            <a>Our Culture <span class="icon-right-arrow"></span></a>
+            <a class="call-to-action">Our Culture</a>
         </div>
     </section>
 
