improve responsive header layout

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <!-- header -->
     <header>
         <div class="content">
-            <img src="img/netmatters-brand/logo-full-alpha.png" alt="Netmatters">
-            <span class="icon-phone"></span>
-            <div class="hamburger-menu">
-                <p>Menu</p>
-            </div>
+            <a class="logo" href="#"><img src="img/netmatters-brand/logo-full-alpha.png" alt="Netmatters"></a>
+            <a class="phone" aria-label="Call our office" href="tel:01603704020"></a>
+            <button type="button" class="hamburger-menu">
+                <div class="hamburger-icon"></div>
+                <h2>Menu</h2>
+            </button>
             <a class="support">Support</a>
             <a class="contact">Contact</a>
             <form>
