fix horizontal position of hero text

--- a/index.html
+++ b/index.html
@@ -204,9 +204,11 @@
 
     <!-- hero image (would be carousel) -->
     <section id="hero-image">
-        <h2>Web Design</h2>
-        <p>For businesses looking to make a strong<br>and effective first impression.</p>
-        <a class="call-to-action" href="https://www.netmatters.co.uk/web-design">Find out more</a>
+        <div class="wrapper">
+            <h2>Web Design</h2>
+            <p>For businesses looking to make a strong<br>and effective first impression.</p>
+            <a class="call-to-action" href="https://www.netmatters.co.uk/web-design">Find out more</a>
+        </div>
     </section>
 
     <!-- services offered -->
