improve accreditations and clients sections

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <div class="hamburger-icon"></div>
                     <h2>Menu</h2>
                 </button>
-                <a class="support">Support</a>
-                <a class="contact">Contact</a>
+                <a class="support" href="https://support.netmatters.com/">Support</a>
+                <a class="contact" href="https://www.netmatters.co.uk/contact-us">Contact</a>
                 <form>
                     <input id="search" name="query" type="search" placeholder="Search...">
                     <button type="submit" id="search-submit"></button>
@@ -267,7 +267,7 @@
 
             <p>We provide cost effective, reliable solutions to a range of services; from bespoke cloud-based management systems, workflow and IT solutions through to creative website development and integrated digital campaigning.</p>
 
-            <a class="call-to-action">Our Culture</a>
+            <a class="call-to-action" href="https://www.netmatters.co.uk/our-culture">Our Culture</a>
         </div>
     </section>
 
@@ -508,22 +508,27 @@
         
         <!-- Google Partner iframe would go here.
             When locally hosted it doesn't display anything, presumably because Google
-            checks where the site is hosted. To avoid an empty gap just disable for now.
+            checks where the site is hosted. To avoid an empty gap a static image is used.
         <div class="badge">
             <script src="https://apis.google.com/js/platform.js" async defer></script>
             <div class="g-partnersbadge" data-agency-id="7604891478"></div>
         </div>
         -->
         <div class="badge">
+            <img class="colour" src="img/accreditations/google-partner.png" alt="Google partner">
+            <img class="bw" src="img/accreditations/google-partner-bw.png" alt="Google partner">
+        </div>
+
+        <div class="badge">
             <!-- microsoft partner logo is already greyscale, so no need for two images,
                 but still nest within a .badge div to maintain consistency -->
-                <img src="img/accreditations/silver-microsoft-partner.jpg" alt="silver microsoft partner">
+                <img src="img/accreditations/silver-microsoft-partner.jpg" alt="Silver Microsoft partner">
             </div>
         <div class="badge">
             <!-- badges given in colour and greyscale version, styled so only one is shown.
                 Ideally would use CSS image filters to make the image greyscale, but not supported in IE11 -->
-            <img class="colour" src="img/accreditations/future-50.jpg" alt="future50 member">
-            <img class="bw" src="img/accreditations/future-50-bw.jpg" alt="future50 member">
+            <img class="colour" src="img/accreditations/future-50.jpg" alt="Future50 member">
+            <img class="bw" src="img/accreditations/future-50-bw.jpg" alt="Future50 member">
         </div>
         <div class="badge">
             <img class="colour" src="img/accreditations/qms.jpg" alt="ISO 27001 certified by QMS">
