improve accessibility for unlabelled links

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,8 @@
                 <a class="support" href="https://support.netmatters.com/">Support</a>
                 <a class="contact" href="https://www.netmatters.co.uk/contact-us">Contact</a>
                 <form>
-                    <input id="search" name="query" type="search" placeholder="Search...">
-                    <button type="submit" id="search-submit"></button>
+                    <input id="search" name="query" type="search" placeholder="Search..." aria-label="Search query">
+                    <button type="submit" id="search-submit" aria-label="Perform search"></button>
                 </form>
             </div>
         </header>
@@ -305,7 +305,7 @@
                     Happy 25th Birthday Kati!
                 </h3></a>
                 <p>Since joining Netmatters Kati has done a fantastic job keeping our IT projects progressing&#8230;</p>
-                <a class="button" href="https://www.netmatters.co.uk/happy-25th-birthday-kati">
+                <a class="button" href="https://www.netmatters.co.uk/happy-25th-birthday-kati" aria-label="Read more about Kati.">
                     Read More
                 </a>
                 <div class="poster">
@@ -339,7 +339,7 @@
                     ZSEA IT Support Case Study
                 </h3></a>
                 <p>As the world continues to change, and businesses evolve, they need to look to ways of futurep&#8230;</p>
-                <a class="button" href="https://www.netmatters.co.uk/zsea-it-support-case-study">
+                <a class="button" href="https://www.netmatters.co.uk/zsea-it-support-case-study" aria-label="Read the case study on ZSEA IT support.">
                     Read More
                 </a>
                 <div class="poster">
@@ -373,7 +373,7 @@
                     Senior Web Developer
                 </h3></a>
                 <p>Salary Range: £30,000 - £40,000 (DOE) + Bonus Hours: 40 hours per week, Monday - Friday Loc&#8230;</p>
-                <a class="button" href="https://www.netmatters.co.uk/our-careers/senior-web-developer">
+                <a class="button" href="https://www.netmatters.co.uk/our-careers/senior-web-developer" aria-label="Learn more about the senior web developer job opening.">
                     Read More
                 </a>
                 <div class="poster">
@@ -503,9 +503,9 @@
             <section class="social-media">
                 <h2>Social Media</h2>
                 <ul>
-                    <li><a class="facebook" href="https://en-gb.facebook.com/netmatters/" target="_blank"></a></li>
-                    <li><a class="twitter" href="https://twitter.com/netmattersltd" target="_blank"></a></li>
-                    <li><a class="linkedin" href="https://www.linkedin.com/company/netmatters-ltd/" target="_blank"></a></li>
+                    <li><a class="facebook" href="https://en-gb.facebook.com/netmatters/" target="_blank" rel="noreferrer" aria-label="Facebook"></a></li>
+                    <li><a class="twitter" href="https://twitter.com/netmattersltd" target="_blank" rel="noreferrer" aria-label="Twitter"></a></li>
+                    <li><a class="linkedin" href="https://www.linkedin.com/company/netmatters-ltd/" target="_blank" rel="noreferrer" aria-label="LinkedIn"></a></li>
                 </ul>
             </section>
         </div>
