--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netmatters | Full Service Digital Agency | Norwich, Norfolk | Netmatters</title>
+    <meta name="description" property="description" content="Our expertise lies in Bespoke Software Development, Digital Marketing, IT Support, Web Design, Telecoms and Cyber Security." />
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
