fix issues from self-review

--- a/public/index.html
+++ b/public/index.html
@@ -455,8 +455,18 @@
                         <span class="postal-code">NR18 0WZ</span>
                         <span class="country-name">UK</span>
                     </span>
-                    <span>Tel: <a href="tel:01603704020"><span class="tel">01603 70 40 20</span></a></span>
-                    <span>Email: <a href="mailto:support@netmatters.com"><span class="email">support@netmatters.com</span></a>
+                    <span>
+                        Tel: 
+                        <a href="tel:01603704020">
+                            <span class="tel">01603 70 40 20</span>
+                        </a>
+                    </span>
+                    <span>
+                        Email: 
+                        <a href="mailto:support@netmatters.com">
+                            <span class="email">support@netmatters.com</span>
+                        </a>
+                    </span>
                 </address>
             </section>
 
