add semantic headings

--- a/public/index.html
+++ b/public/index.html
@@ -22,12 +22,13 @@
     <div class="first-container">
         <!-- header -->
         <header>
+            <h1>Netmatters</h1>
             <div class="content">
                 <a class="logo" href="#"><img src="img/netmatters-brand/logo-full-alpha.png" alt="Netmatters"></a>
                 <a class="phone" aria-label="Call our office" href="tel:01603704020"></a>
                 <button type="button" class="hamburger-menu">
-                    <div class="hamburger-icon"></div>
-                    <h2>Menu</h2>
+                    <span class="hamburger-icon"></span>
+                    <span class="title">Menu</span>
                 </button>
                 <a class="support" href="https://support.netmatters.com/">Support</a>
                 <a class="contact" href="https://www.netmatters.co.uk/contact-us">Contact</a>
@@ -225,41 +226,42 @@
 
     <!-- services offered -->
     <section id="services">
+        <h2>Services</h2>
         <div class="top-services">
             <a class="bespoke-software" href="https://www.netmatters.co.uk/bespoke-software">
-                <h2>Bespoke Software</h2>
+                <h3>Bespoke Software</h3>
                 <p>Tailored software solutions to improve business productivity and online profits. Our expert team will ensure a software solution.</p>
                 <p class="call-to-action">Read more</p>
             </a>
             <a class="it-support" href="https://www.netmatters.co.uk/it-support">
-                <h2>IT Support</h2>
+                <h3>IT Support</h3>
                 <p>Remotely managed IT services that is catered to your businesses needs, adds value and reduces costs.</p>
                 <p class="call-to-action">Read more</p>
             </a>
             <a class="digital-marketing" href="https://www.netmatters.co.uk/digital-marketing">
-                <h2>Digital Marketing</h2>
+                <h3>Digital Marketing</h3>
                 <p>Driving brand awareness and ROI through creative digital marketing campaigns. We review and monitor online performances.</p>
                 <p class="call-to-action">Read more</p>
             </a>
         </div>
         <div class="other-services">
             <a class="telecoms-services" href="https://www.netmatters.co.uk/telecoms-services">
-                <h2>Telecoms Services</h2>
+                <h3>Telecoms Services</h3>
                 <p>Stay connected with bespoke telecoms solutions when you need it most.</p>
                 <p class="call-to-action">Read more</p>
             </a>
             <a class="web-design" href="https://www.netmatters.co.uk/web-design">
-                <h2>Web Design</h2>
+                <h3>Web Design</h3>
                 <p>User-centric design for businesses looking to make a lasting first impression.</p>
                 <p class="call-to-action">Read more</p>
             </a>
             <a class="cyber-security" href="https://www.netmatters.co.uk/cyber-security">
-                <h2>Cyber Security</h2>
+                <h3>Cyber Security</h3>
                 <p>Ensuring your online business stays secure 24/7, 365 days of the year.</p>
                 <p class="call-to-action">Read more</p>
             </a>
             <a class="developer-training" href="https://www.netmatters.co.uk/scs-web-developer-course">
-                <h2>Developer Training</h2>
+                <h3>Developer Training</h3>
                 <p>Have you considered a career in web development but you aren’t sure where to start?</p>
                 <p class="call-to-action">Read more</p>
             </a>
@@ -392,6 +394,7 @@
 
     <!-- clients -->
     <section id="clients">
+        <h2>Clients</h2>
         <div class="badge">
             <!-- badges given in colour and greyscale version, styled so only one is shown.
                 Ideally would use CSS image filters to make the image greyscale, but not supported in IE11 -->
@@ -524,6 +527,7 @@
 
     <!-- accreditations -->
     <section id="accreditations">
+        <h2>Accreditations</h2>
         
         <!-- Google Partner iframe would go here.
             When locally hosted it doesn't display anything, presumably because Google
