fix text position in navigation bar

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
             <div class="wrapper">
                 <div class="category web-design">
                     <a class="category-head" href="https://www.netmatters.co.uk/web-design">
-                        <h2>Web<br>Design</h2>
+                        <h2><span class="first">Web</span> Design</h2>
                     </a>
                     <div class="sub-wrapper">
                         <div class="subcategories">
@@ -72,7 +72,7 @@
 
                 <div class="category it-support">
                     <a class="category-head" href="https://www.netmatters.co.uk/it-support">
-                        <h2>IT<br>Support</h2>
+                        <h2><span class="first">IT</span> Support</h2>
                     </a>
                     <div class="sub-wrapper">
                         <div class="subcategories">
@@ -100,7 +100,7 @@
 
                 <div class="category telecoms-services">
                     <a class="category-head" href="https://www.netmatters.co.uk/telecoms-services">
-                        <h2>Telecoms<br>Services</h2>
+                        <h2><span class="first">Telecoms</span> Services</h2>
                     </a>
                     <div class="sub-wrapper">
                         <div class="subcategories">
@@ -128,7 +128,7 @@
 
                 <div class="category bespoke-software">
                     <a class="category-head" href="https://www.netmatters.co.uk/bespoke-software">
-                        <h2>Bespoke<br>Software</h2>
+                        <h2><span class="first">Bespoke</span> Software</h2>
                     </a>
                     <div class="sub-wrapper">
                         <div class="subcategories">
@@ -156,7 +156,7 @@
                 
                 <div class="category digital-marketing">
                     <a class="category-head" href="https://www.netmatters.co.uk/digital-marketing">
-                        <h2>Digital<br>Marketing</h2>
+                        <h2><span class="first">Digital</span> Marketing</h2>
                     </a>
                     <div class="sub-wrapper">
                         <div class="subcategories">
@@ -184,7 +184,7 @@
                 
                 <div class="category cyber-security">
                     <a class="category-head" href="https://www.netmatters.co.uk/cyber-security">
-                        <h2>Cyber<br>Security</h2>
+                        <h2><span class="first">Cyber</span> Security</h2>
                     </a>
                     <div class="sub-wrapper">
                         <div class="subcategories">
