fix Google partner logo colour

--- a/public/index.html
+++ b/public/index.html
@@ -538,8 +538,7 @@
         </div>
         -->
         <div class="badge">
-            <img class="colour" src="img/accreditations/google-partner.png" alt="Google partner">
-            <img class="bw" src="img/accreditations/google-partner-bw.png" alt="Google partner">
+            <img src="img/accreditations/google-partner.png" alt="Google partner">
         </div>
 
         <div class="badge">
